testdata/invalid/current_comm_bad_arg.hzn
package invalid

import bpf "m31labs.dev/horizon/runtime/kernel"

type Event struct {
    pid u32
}

map Events ringbuf[Event]

@tracepoint("sched:sched_process_exec")
func Bad(ctx tracepoint.Exec) i32 {
    event := Events.reserve()
    if event == nil {
        return 0
    }
    bpf.current_comm(&event.pid)
    Events.submit(event)
    return 0
}
